devops/k8s/st/datastewardship/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datastewardship-st
  labels:
    name: datastewardship-st
